--- a/v3/index.html
+++ b/v3/index.html
@@ -5,7 +5,7 @@
     <style>
         body {
             margin: 0;
-            font-family: Arial, sans-serif;
+            font-family: Georgia, 'Times New Roman', Times, serif;
             display: flex;
             min-height: 100vh;
             flex-direction: column;
