--- a/project-scratch.html
+++ b/project-scratch.html
@@ -56,13 +56,13 @@
 </head>
 <body>
     <div class="left-side">
-        <strong><center>P5JS Project - Showcasing Animation</center></Strong>
-        <p><strong>Project Objective:</strong> The objective of this assignment is to demonstrate the use of animation and user interaction in a simple p5.js program. This is achieved through the depiction of a house adorned with decorative lights on a twinkling starry night.</p>
-        <p><strong>The Approach:</strong> The animation includes three main interactions. The first is a welcome page, where the initial user interaction takes place, leading to the main page. On the main page, the stars in the sky twinkle, and the lights on the house change color in response to user interaction. The user can toggle the color of the lights or navigate to an exit page that features a beautifully animated Diwali diya.</p>
-        <p><strong>P5JS Elements:</strong> The program utilizes various "P5JS" drawing functions, such as rect, ellipse, line, bezier, and arc, and effectively organizes functionality into separate methods. For instance, house is used for drawing the house, createStar for generating stars, and printLight for displaying the house lights and handling user interactions via mouse clicks, by handling mouse clicks in mousePressed method.</p>
+        <strong><center>Scratch Project -  Time to Parallel Park</center></Strong>
+        <p><strong>Project Objective:</strong> To develop problem-solving and programming skills by creating a functional parking game in Scratch.</p>
+        <p><strong>The Approach:</strong> Players control a car to navigate a parking lot and park in a designated spot. The game utilizes loops to control the car's movement and functions to handle specific actions like turning and checking for obstacles. A restricted pivot adds realism to the driving experience.</p>
+        <p><strong>Coding Elements:</strong> The game employs a variety of coding elements to create a realistic and engaging parking experience. Loops, both for and while, are used to control the car's movement and check conditions. Functions are defined to modularize the code and handle specific tasks like turning and checking for obstacles. Sound effects enhance the user experience by providing auditory feedback. Sprites are used to represent the car, parking spots, and other objects in the game. The game responds to user input, such as keyboard presses, to control the car's movement. Additionally, zone-based interactions are implemented to adjust the car's behavior based on its location within the parking lot.</p>
     </div>
 
     <!-- Move the script to the end of the body for better control over loading and canvas positioning -->
-    <script src="script/lights.js"></script>
+    <iframe src="https://scratch.mit.edu/projects/1094015497/embed" allowtransparency="true" width="485" height="402" frameborder="0" scrolling="no" allowfullscreen></iframe>
 </body>
 </html>
