--- a/project-eod.html
+++ b/project-eod.html
@@ -50,7 +50,7 @@
 
     <!-- Radio buttons container -->
     <div id="radio-container">
-        <input type="radio" id="aiHuman" name="image" value="aihuman" checked>
+        <input type="radio" id="eod-AIvshuman" name="image" value="aihuman" checked>
         <label for="aiHuman">AI vs Human</label>
         <input type="radio" id="negative" name="image" value="negative">
         <label for="negative">Negative</label>
