--- a/project-eod.html
+++ b/project-eod.html
@@ -50,19 +50,19 @@
 
     <!-- Radio buttons container -->
     <div id="radio-container">
-        <input type="radio" id="aiHuman" name="image" value="aihuman" checked>
+        <input type="radio" id="eod-aivshuman" name="image" value="eod-aivshuman" checked>
         <label for="aiHuman">AI vs Human</label>
-        <input type="radio" id="negative" name="image" value="negative">
-        <label for="negative">Negative</label>
-        <input type="radio" id="dots" name="image" value="dots">
+        <input type="radio" id="eod-positiveandnegative" name="image" value="eod-positiveandnegative">
+        <label for="negative">Postive and Negative</label>
+        <input type="radio" id="eod-dots" name="image" value="eod-dots">
         <label for="dots">Dots</label>
-        <input type="radio" id="colours" name="image" value="colours">
+        <input type="radio" id="eod-colours" name="image" value="eod-colours">
         <label for="colours">Colours</label>
     </div>
 
     <!-- Image container -->
     <div id="image-container">
-        <img id="image" src="images/aihuman.png" alt="Image">
+        <img id="image" src="images/eod-aivshuman.png" alt="Image">
     </div>
 
     <script>
