--- a/project-python.html
+++ b/project-python.html
@@ -1,130 +1,70 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-    <meta charset="UTF-8">
+    <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Interactive Book</title>
+    <title>Sonia Wadhwani - Centered Canvas</title>
     <style>
+        /* Set the background color for the body and font style */
         body {
-            background-color: #f5f5f5;
+            background-color: #839791; /* Set the background color */
             margin: 0;
-            font-family: 'Arial', sans-serif;
-            overflow: hidden;
+            font-family: 'Georgia';
             display: flex;
-            justify-content: center;
-            align-items: center;
             height: 100vh;
-        }
-
-        .container {
-            width: 95%;
-            height: 95vh;
             overflow: hidden;
-            position: relative;
-            display: flex;
-            justify-content: center;
-            align-items: center;
         }
 
-        .page {
+        /* Left side styling - PDF section */
+        .left-side {
+            flex: 50%; /* This section takes up 60% of the screen width */
+            display: flex;
+            justify-content: flex-start;
+            align-items: flex-start;
+            padding: 10px;
+            background-color: #839791; /* Light greenish background for the left side */
+        }
+
+        /* PDF Embed styling */
+        .pdf-embed {
             width: 100%;
-            height: 100%;
+            height: 100vh; /* Takes full height of the viewport */
+            border: none; /* Remove any borders */
+        }
+
+        /* Right side styling - Video section */
+        .right-side {
+            flex: 50%; /* This section takes up 40% of the screen width */
             display: flex;
-            align-items: center;
             justify-content: center;
-            position: relative;
-            overflow: hidden;
-            transition: transform 0.5s ease, opacity 0.5s ease;
+            align-items: center;
+            background-color: #839791; /* Light background for the video section */
+            padding: 5; /* Remove padding */
+            margin: 5; /* Remove margin */
         }
 
-        .page img {
-            max-width: 100%;
-            max-height: 100%;
-            object-fit: contain; /* Maintain aspect ratio without cutting off */
-        }
-
-        /* Add page turning transition */
-        .scroll-up {
-            transform-origin: right center;
-            animation: turnRightToLeft 0.5s forwards;
-        }
-
-        .scroll-down {
-            transform-origin: left center;
-            animation: turnLeftToRight 0.5s forwards;
-        }
-
-        @keyframes turnRightToLeft {
-            from {
-                transform: translateX(100%);
-            }
-            to {
-                transform: translateX(0);
-            }
-        }
-
-        @keyframes turnLeftToRight {
-            from {
-                transform: translateX(-100%);
-            }
-            to {
-                transform: translateX(0);
-            }
+        /* Video styling */
+        .video {
+            width: 100%; /* Take up 100% of the right section's width */
+            height: 100vh; /* Take up 100% of the available height */
+            object-fit: contain; /* Maintain aspect ratio */
         }
     </style>
 </head>
 <body>
-    <div class="container" id="bookContainer">
-        <div class="page" id="currentPage">
-            <img src="images/bookpage1.png" alt="Page 1" id="pageImage">
-        </div>
+
+    <!-- Left side for the PDF -->
+    <div class="left-side">
+        <embed class="pdf-embed" src="foodie-casestudy.pdf" type="application/pdf">
     </div>
 
-    <script>
-        let currentPage = 1;
-        const totalPages = 9;
-        const pageContainer = document.getElementById("currentPage");
-        const pageImage = document.getElementById("pageImage");
+    <!-- Right side for the video -->
+    <div class="right-side">
+        <video class="video" controls>
+            <source src="images/pythonproject.mp4" type="video/mp4">
+            Your browser does not support the video tag.
+        </video>
+    </div>
 
-        // Initialize mouse click events
-        window.addEventListener('mousedown', handleMouseClick);
-
-        function handleMouseClick(event) {
-            if (event.button === 0) { // Left click (previous page)
-                if (currentPage > 1) {
-                    currentPage--;
-                    updatePage('scroll-down');
-                }
-            } else if (event.button === 2) { // Right click (next page)
-                if (currentPage < totalPages) {
-                    currentPage++;
-                    updatePage('scroll-up');
-                }
-            }
-        }
-
-        function updatePage(scrollDirection) {
-            const pageImageSrc = `images/bookpage${currentPage}.png`;
-            pageImage.src = pageImageSrc;
-
-            if (scrollDirection === 'scroll-up') {
-                pageContainer.classList.add('scroll-up');
-            } else if (scrollDirection === 'scroll-down') {
-                pageContainer.classList.add('scroll-down');
-            }
-
-            setTimeout(() => {
-                pageContainer.classList.remove('scroll-up', 'scroll-down');
-            }, 500);
-        }
-
-        // Initialize the first page
-        updatePage('scroll-up');
-
-        // Prevent right-click menu
-        window.addEventListener("contextmenu", (event) => {
-            event.preventDefault();
-        });
-    </script>
 </body>
 </html>
