--- a/project-eod.html
+++ b/project-eod.html
@@ -50,7 +50,7 @@
 
     <!-- Radio buttons container -->
     <div id="radio-container">
-        <input type="radio" id="aiHuman" name="image" value="aihuman" checked>
+        <input type="radio" id="eod-aivsHuman" name="image" value="eod-aivsHuman" checked>
         <label for="aiHuman">AI vs Human</label>
         <input type="radio" id="eod-positiveandnegative" name="image" value="eod-positiveandnegative">
         <label for="negative">Postive and Negative</label>
