Made header sticky

--- a/index.html
+++ b/index.html
@@ -67,38 +67,16 @@
         <section id="skills">
             <h2>Skills</h2>
             <div class="skill-animation" id="animation-container">
-                <div class="skill-circle circle-1">
-                    <p>HTML</p>
-                </div>
-                <div class="skill-circle circle-2">
-                    <p>CSS</p>
-                </div>
-                <div class="skill-circle circle-3">
-                    <p>JavaScript</p>
-                </div>
-                <div class="skill-circle circle-4">
-                    <p>P5JS</p>
-                </div>
-                <div class="skill-circle circle-5">
-                    <p>Python</p>
-                </div>
-                <div class="skill-circle circle-6">
-                    <p>Canva</p>
-                </div>
-                <div class="skill-circle circle-7">
-                    <p>Photoshop</p>
-                </div>
-                <div class="skill-circle circle-8">
-                    <p>Adobe Illustrator</p>
-                </div>
-                <div class="skill-circle circle-9">
-                    <p>Figma</p>
-                </div>
-                <div class="skill-circle circle-10">
-                    <p>Powerpoint</p>
-                </div>
-                
-                
+                <div class="skill-circle circle-1"><p>HTML</p></div>
+                <div class="skill-circle circle-2"><p>CSS</p></div>
+                <div class="skill-circle circle-3"><p>JavaScript</p></div>
+                <div class="skill-circle circle-4"><p>P5JS</p></div>
+                <div class="skill-circle circle-5"><p>Python</p></div>
+                <div class="skill-circle circle-6"><p>Canva</p></div>
+                <div class="skill-circle circle-7"><p>Photoshop</p></div>
+                <div class="skill-circle circle-8"><p>Adobe Illustrator</p></div>
+                <div class="skill-circle circle-9"><p>Figma</p></div>
+                <div class="skill-circle circle-10"><p>Powerpoint</p></div>
             </div>
         </section>
 
