--- a/index.html
+++ b/index.html
@@ -65,7 +65,7 @@
         </section>
 
         <section id="skills">
-            <h2>Skills</h2>
+            <h2>Tools & Skills</h2>
             <div class="skill-animation" id="animation-container">
                 <div class="skill-circle circle-1"><p>HTML</p></div>
                 <div class="skill-circle circle-2"><p>CSS</p></div>
