--- a/index.html
+++ b/index.html
@@ -99,7 +99,7 @@
                 <img src="images/projectbooktn.png" alt="Book Thumbnail" class="thumbnail" onclick="openModal('project-book.html','45%','70%')">
                 <img src="images/projectflexhubtn.png" alt="Flexhub Thumbnail" class="thumbnail" onclick="openCustomWindow('https://flexhub.work', '1200', '800')">
             </div>
-        </section>x
+        </section>
         <div id="modal" class="modal">
             <div id="modalContent" class="modal-content">
                 <span class="close" onclick="closeModal()">&times;</span>
