--- a/index.html
+++ b/index.html
@@ -41,7 +41,7 @@
 
         <section id="about-me">
             <div class="about-me">
-                <h2 class="about-title">About Me</h2>
+                <h2>About Me</h2>
                 <h2 class="timeline-title">My Timeline...</h2>
                 <div class="timeline">
                     <div class="milestone milestone-1"></div>
