trying about css

--- a/index.html
+++ b/index.html
@@ -42,7 +42,7 @@
         <section id="about-me">
             <div class="about-me">
                 <h2>About Me</h2>
-                <h2 class="timeline-title">My Timeline...</h2>
+                <p class="timeline-title"><strong>My Timeline...</strong></p>
                 <div class="timeline">
                     <div class="milestone milestone-1"></div>
                     <div class="milestone milestone-2"></div>
