comment over lay on projects

--- a/index.html
+++ b/index.html
@@ -85,7 +85,7 @@
                 <img src="images/projecteod.png" alt="Elements of Design Project" class="project-image" id="project4">
                 <img src="images/projectbook.png" alt="Book Project" class="project-image" id="project5">
                 <img src="images/projectflexhub.png" alt="Flexhub Project" class="project-image" id="project6">
-                <div class="project-title" id="project-title">Scratch Project - Parallel Parking</div>
+                <!--<div class="project-title" id="project-title">Scratch Project - Parallel Parking</div>-->
             </div>
             <div class="thumbnail-container">
                 <img src="images/projectscratchtn.png" alt="Scratch Thumbnail" class="thumbnail" onclick="openModal('project-scratch.html','60%','50%')">
