updated the device check

--- a/index.html
+++ b/index.html
@@ -226,9 +226,20 @@
             function closeOverlay() {
                 document.getElementById('overlay').style.display = 'none';
             }
-        </script>
+ 
     
+        // Device orientation check script
+        function checkOrientation() {
+            const isLandscape = screen.orientation.type === 'landscape-primary' || screen.orientation.type === 'landscape-secondary';
+            if (!isLandscape) {
+                alert('This page is best viewed in landscape mode!');
+            }
+        }
 
+        window.addEventListener('orientationchange', checkOrientation);
+
+        checkOrientation(); // Check initial orientation on page load
+    </script>
 
     </body>
 
