--- a/index.html
+++ b/index.html
@@ -89,7 +89,7 @@
             </div>
             <div class="thumbnail-container">
                 <img src="images/projectscratchtn.png" alt="Scratch Thumbnail" class="thumbnail" onclick="openModal('project-scratch.html','60%','60%')">
-                <img src="images/projectp5jstn.png" alt="P5JS Thumbnail" class="thumbnail" onclick="openModal('project-p5js.html')">
+                <img src="images/projectp5jstn.png" alt="P5JS Thumbnail" class="thumbnail" onclick="openModal('project-p5js.html'),'60%','60%'">
                 <img src="images/projectpythontn.png" alt="Python Thumbnail" class="thumbnail" onclick="openModal('project-python.html','80%','60%')">
                 <img src="images/projecteodtn.png" alt="EOD Thumbnail" class="thumbnail" onclick="openModal('project-eod.html')">
                 <img src="images/projectbooktn.png" alt="Book Thumbnail" class="thumbnail" onclick="openModal('project-book.html','45%','70%')">
