--- a/project-p5js.html
+++ b/project-p5js.html
@@ -14,15 +14,15 @@
     <script src="https://cdnjs.cloudflare.com/ajax/libs/p5.js/1.10.0/addons/p5.sound.min.js"></script>
 </head>
 <body>
-    <div class="left-section">
+    <div class="left-side">
         <strong><center>P5JS Project - Showcasing Animation</center></Strong>
         <p><strong>Project Objective:</strong> The objective of this assignment is to demonstrate the use of animation and user interaction in a simple p5.js program. This is achieved through the depiction of a house adorned with decorative lights on a twinkling starry night.</p>
         <p><strong>The Approach:</strong> The animation includes three main interactions. The first is a welcome page, where the initial user interaction takes place, leading to the main page. On the main page, the stars in the sky twinkle, and the lights on the house change color in response to user interaction. The user can toggle the color of the lights or navigate to an exit page that features a beautifully animated Diwali diya.</p>
         <p><strong>P5JS Elements:</strong> The program utilizes various "P5JS" drawing functions, such as rect, ellipse, line, bezier, and arc, and effectively organizes functionality into separate methods. For instance, house is used for drawing the house, createStar for generating stars, and printLight for displaying the house lights and handling user interactions via mouse clicks, by handling mouse clicks in mousePressed method.</p>
     </div>
-    <div class="right-section">
+
     <!-- Move the script to the end of the body for better control over loading and canvas positioning -->
     <script src="script/lights.js"></script>
-    </div>
+
 </body>
 </html>
