--- a/project-scratch.html
+++ b/project-scratch.html
@@ -1,18 +1,30 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Sonia Wadhwani - Centered Canvas</title>
-
-
-
     
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Raleway:ital,wght@0,100..900;1,100..900&display=swap" rel="stylesheet">
+    <link rel="stylesheet" href="css/style-subpages.css">
+
     <script src="https://cdnjs.cloudflare.com/ajax/libs/p5.js/1.10.0/p5.js"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/p5.js/1.10.0/addons/p5.sound.min.js"></script>
 </head>
+
 <body>
-    <!-- Move the script to the end of the body for better control over loading and canvas positioning -->
-    <iframe src="https://scratch.mit.edu/projects/1094015497/embed" allowtransparency="true" width="485" height="402" frameborder="0" scrolling="no" allowfullscreen></iframe>
+    <!-- Left side for the PDF -->
+    <div class="left-side">
+        <embed class="pdf-embed" src="p5js-casestudy.pdf" type="application/pdf">
+    </div>
+
+    <!-- Right side for the Scratch iframe -->
+    <div class="right-side">
+        <iframe src="https://scratch.mit.edu/projects/1094015497/embed" allowtransparency="true" width="485" height="402" frameborder="0" scrolling="no" allowfullscreen></iframe>
+    </div>
 </body>
+
 </html>
