--- a/project-eod.html
+++ b/project-eod.html
@@ -20,14 +20,17 @@
         h1 {
             font-family: 'DM Serif Display';
             font-size: 36px;
-            margin-bottom: 20px;
+            margin-bottom: 10px;
+            margin-top: 0px;
         }
 
         #radio-container {
             display: flex;
             justify-content: center;
             gap: 20px; /* Adds equal spacing between radio buttons */
-            margin-bottom: 20px;
+            margin-top: 10px;
+            margin-bottom: 10px;
+            padding-bottom: 20px;
         }
 
         #image-container {
