--- a/project-scratch.html
+++ b/project-scratch.html
@@ -18,7 +18,7 @@
 <body>
     <!-- Left side for the PDF -->
     <div class="left-side">
-        <embed class="pdf-embed" src="scratchgame-casestudy.pdf" type="application/pdf">
+        <iframe class="pdf-embed" src="scratchgame-casestudy.pdf" width="100%" height="600px"></iframe>
     </div>
 
     <!-- Right side for the Scratch iframe -->
