--- a/project-p5js.html
+++ b/project-p5js.html
@@ -31,7 +31,7 @@
     
         <!-- Left side for the PDF -->
         <div class="left-side">
-            <iframe class="pdf-embed" src="p5js-casestudy.pdf" width="100%" height="600px"></iframe>
+            <embed class="pdf-embed" src="p5js-casestudy.pdf" type="application/pdf">
         </div>
 
         <script src="script/lights.js"></script>
