updaed pdf reference

--- a/project-python.html
+++ b/project-python.html
@@ -15,7 +15,7 @@
 
     <!-- Left side for the PDF -->
     <div class="left-side">
-        <embed class="pdf-embed" src="foodiebuddy-casestudy.pdf" type="application/pdf">
+        <embed class="pdf-embed" src="foodbuddy-casestudy.pdf" type="application/pdf">
     </div>
 
     <!-- Right side for the video -->
