changes to contact me links

--- a/index.html
+++ b/index.html
@@ -140,7 +140,7 @@
                         <div class="accordion-item active">
                             <button>Social Media <span>-</span></button>
                             <div class="accordion-content contact-links" style="display: block;">
-                                <a href="https://www.instagram.com/tunnaa.oo" target="_blank">
+                                <a href="https://www.instagram.com/soniawadhwani_/" target="_blank">
                                     <img src="images/insta.png" alt="Instagram"> Instagram
                                 </a>
                                 <a href="https://www.behance.net/soniawadhwani" target="_blank">
@@ -149,7 +149,7 @@
                                 <a href="https://www.linkedin.com/in/soniawadhwani/" target="_blank">
                                     <img src="images/linkedin.png" alt="LinkedIn"> LinkedIn
                                 </a>
-                                <a href="abcd.html" target="_blank">
+                                <a href="https://in.pinterest.com/soniawadhwani_/" target="_blank">
                                     <img src="images/pinterest.png" alt="Pinterest"> Pinterest
                                 </a>
                                 <a href="http://wa.me/+917972122827" target="_blank">
