--- a/index.html
+++ b/index.html
@@ -9,6 +9,8 @@
         <link href="https://fonts.googleapis.com/css2?family=Raleway:ital,wght@0,100..900;1,100..900&display=swap" rel="stylesheet">   
         <title>Sonia Wadhwani</title>
         <link rel="stylesheet" href="css/style.css"> </head>
+        <script src="https://cdnjs.cloudflare.com/ajax/libs/p5.js/1.10.0/p5.js"></script>
+        <script src="https://cdnjs.cloudflare.com/ajax/libs/p5.js/1.10.0/addons/p5.sound.min.js"></script>        
     </head>
 
     <body>
