changed video name

--- a/project-python.html
+++ b/project-python.html
@@ -21,7 +21,7 @@
     <!-- Right side for the video -->
     <div class="right-side">
         <video class="video" controls>
-            <source src="images/pythonproject.mp4" type="video/mp4">
+            <source src="images/pythonvideo.mp4" type="video/mp4">
             Your browser does not support the video tag.
         </video>
     </div>
