--- a/project-eod.html
+++ b/project-eod.html
@@ -53,7 +53,7 @@
 
     <!-- Radio buttons container -->
     <div id="radio-container">
-        <input type="radio" id="eod-aivshuman" name="image" value="eod-aivshuman" checked>
+        <input type="radio" id="eod-aihuman" name="image" value="eod-aihuman" checked>
         <label for="aiHuman">AI vs Human</label>
         <input type="radio" id="eod-positiveandnegative" name="image" value="eod-positiveandnegative">
         <label for="negative">Postive and Negative</label>
