changed file name

--- a/project-eod.html
+++ b/project-eod.html
@@ -65,7 +65,7 @@
 
     <!-- Image container -->
     <div id="image-container">
-        <img id="image" src="images/eod-aivshuman.png" alt="Image">
+        <img id="image" src="images/eod-aihuman.png" alt="Image">
     </div>
 
     <script>
