--- a/index.html
+++ b/index.html
@@ -185,7 +185,7 @@
                     <p style="font-weight: bold; margin-left: 20px;">Contact me</p>
                     
                     <div style="display: flex; justify-content: center; gap: 100px;">
-                        <a href="https://www.instagram.com/tunnaa.oo" target="_blank">
+                        <a href="https://www.instagram.com/soniawadhwani_" target="_blank">
                             <img src="images/insta.png" alt="Instagram" style="width: 32px; height: 32px;">
                         </a>
                         <a href="https://www.behance.net/soniawadhwani" target="_blank">
@@ -194,7 +194,7 @@
                         <a href="https://www.linkedin.com/in/soniawadhwani/" target="_blank">
                             <img src="images/linkedin.png" alt="LinkedIn" style="width: 24px; height: 24px;">
                         </a>
-                        <a href="abcd.html" target="_blank">
+                        <a href="https://in.pinterest.com/soniawadhwani_/" target="_blank">
                             <img src="images/pinterest.png" alt="Pinterest" style="width: 24px; height: 24px;">
                         </a>
                         <a href="http://wa.me/+917972122827" target="_blank">
