--- a/index.html
+++ b/index.html
@@ -88,7 +88,7 @@
             </div>
             <div class="thumbnail-container">
                 <img src="images/projectscratchtn.png" alt="Scratch Thumbnail" class="thumbnail" onclick="openModal('project-scratch.html','80%','70%')">
-                <img src="images/projectp5jstn.png" alt="P5JS Thumbnail" class="thumbnail" onclick="openModal('project-p5js.html'),'42%','62%'">
+                <img src="images/projectp5jstn.png" alt="P5JS Thumbnail" class="thumbnail" onclick="openModal('project-p5js.html'),'800','650'">
                 <img src="images/projectpythontn.png" alt="Python Thumbnail" class="thumbnail" onclick="openModal('project-python.html','90%','75%')">
                 <img src="images/projecteodtn.png" alt="EOD Thumbnail" class="thumbnail" onclick="openModal('project-eod.html','60%','70%')">
                 <img src="images/projectbooktn.png" alt="Book Thumbnail" class="thumbnail" onclick="openModal('project-book.html','45%','70%')">
