--- a/project-python.html
+++ b/project-python.html
@@ -15,9 +15,8 @@
 
     <!-- Left side for the PDF -->
     <div class="left-side">
-        <embed class="pdf-embed" src="foodbuddy-casestudy.pdf" type="application/pdf">
+        <iframe class="pdf-embed" src="foodbuddy-casestudy.pdf" width="100%" height="600px"></iframe>
     </div>
-
     <!-- Right side for the video -->
     <div class="right-side">
         <video class="video" controls>
