--- a/project-p5js.html
+++ b/project-p5js.html
@@ -28,6 +28,7 @@
         <link rel="stylesheet" href="css/style-subpages.css"> </head>
     </head>
     <body>
-        <script src="script/lights.js"></script>
+        <!--<script src="script/lights.js"></script>-->
+        <iframe src="https://editor.p5js.org/soniaawadhwaniii/full/ydSpgPSOx"></iframe>
     </body>
 </html>
