--- a/project-p5js.html
+++ b/project-p5js.html
@@ -29,6 +29,16 @@
     </head>
     <body>
         <!--<script src="script/lights.js"></script>-->
-        <iframe src="https://editor.p5js.org/soniaawadhwaniii/full/ydSpgPSOx"></iframe>
+        <!--<iframe src="https://editor.p5js.org/soniaawadhwaniii/full/ydSpgPSOx"></iframe>-->
+
+        <!-- Left side for the PDF -->
+        <div class="left-side">
+            <iframe class="pdf-embed" src="p5js-casestudy.pdf" width="100%" height="600px"></iframe>
+        </div>
+    
+        <!-- Right side for the Scratch iframe -->
+        <div class="right-side">
+            <iframe src="https://editor.p5js.org/soniaawadhwaniii/full/ydSpgPSOx" allowtransparency="true" width="800" height="650" frameborder="0" scrolling="no" allowfullscreen></iframe>
+        </div>    
     </body>
 </html>
