--- a/project-p5js.html
+++ b/project-p5js.html
@@ -37,7 +37,7 @@
         </div>
     
         <!-- Right side for the Scratch iframe -->
-        <div class="right-side">
+        <div>
             <iframe src="https://editor.p5js.org/soniaawadhwaniii/full/ydSpgPSOx" allowtransparency="true" width="800" height="650" frameborder="0" scrolling="no" allowfullscreen></iframe>
         </div>    
     </body>
