--- a/project-p5js.html
+++ b/project-p5js.html
@@ -31,10 +31,10 @@
         <!--<script src="script/lights.js"></script>-->
         <!--<iframe src="https://editor.p5js.org/soniaawadhwaniii/full/ydSpgPSOx"></iframe>-->
 
-        <!-- Left side for the PDF -->
+        <!-- Left side for the PDF
         <div class="left-side">
             <iframe class="pdf-embed" src="p5js-casestudy.pdf" width="100%" height="600px"></iframe>
-        </div>
+        </div> -->
     
         <!-- Right side for the Scratch iframe -->
         <div>
