--- a/project-eod.html
+++ b/project-eod.html
@@ -2,11 +2,50 @@
 <html lang="en">
 <head>
     <title>Elements of Design</title>
-    <link rel="stylesheet" href="css/style-eod.css">
+    <style>
+        body {
+            background-color: #839791;
+            font-family: Arial, sans-serif;
+            text-align: center;
+            margin: 0;
+            padding: 0;
+            display: flex;
+            flex-direction: column;
+            align-items: center;
+            justify-content: center;
+            height: 100vh;
+            overflow: hidden; /* Prevent scrollbars */
+        }
+        h1 {
+            font-family: 'DM Serif Display';
+            font-size: 36px;
+            margin-bottom: 10px;
+            margin-top: 0px;
+        }
+        #radio-container {
+            display: flex;
+            justify-content: center;
+            gap: 20px; /* Adds equal spacing between radio buttons */
+            margin-top: 10px;
+            margin-bottom: 10px;
+            padding-bottom: 20px;
+        }
+        #image-container {
+            width: 100%;
+            height: calc(100vh - 160px); /* Adjusted height to account for header and radio buttons */
+            display: flex;
+            justify-content: center;
+            align-items: center;
+        }
+        #image {
+            max-width: 100%;
+            max-height: 100%;
+            object-fit: contain; /* Maintain aspect ratio within container */
+        }
+    </style>
 </head>
 <body>
     <h1>Elements of Design</h1>
-
     <!-- Radio buttons container -->
     <div id="radio-container">
         <input type="radio" id="eod-aihuman" name="image" value="eod-aihuman" checked>
@@ -23,7 +62,15 @@
     <div id="image-container">
         <img id="image" src="images/eod-aihuman.png" alt="Image">
     </div>
-    <script src="script/eod.js"></script>
 
+    <script>
+        // JavaScript to change image source based on selected radio button
+        const image = document.getElementById("image");
+        document.querySelectorAll('input[name="image"]').forEach(radio => {
+            radio.addEventListener("change", (event) => {
+                image.src = `images/${event.target.value}.png`;
+            });
+        });
+    </script>
 </body>
 </html>
