--- a/project-p5js.html
+++ b/project-p5js.html
@@ -28,17 +28,6 @@
         <link rel="stylesheet" href="css/style-subpages.css"> </head>
     </head>
     <body>
-        <!--<script src="script/lights.js"></script>-->
-        <!--<iframe src="https://editor.p5js.org/soniaawadhwaniii/full/ydSpgPSOx"></iframe>-->
-
-        <!-- Left side for the PDF
-        <div class="left-side">
-            <iframe class="pdf-embed" src="p5js-casestudy.pdf" width="100%" height="600px"></iframe>
-        </div> -->
-    
-        <!-- Right side for the Scratch iframe -->
-
-            <iframe src="https://editor.p5js.org/soniaawadhwaniii/full/ydSpgPSOx" allowtransparency="true" width="800" height="650" frameborder="0" scrolling="no" allowfullscreen></iframe>
- 
+            <iframe src="https://editor.p5js.org/soniaawadhwaniii/full/ydSpgPSOx" allowtransparency="true" frameborder="0" scrolling="no" allowfullscreen></iframe>
     </body>
 </html>
