changed map location

--- a/index.html
+++ b/index.html
@@ -166,7 +166,7 @@
                             <button>Location <span>-</span></button>
                             <div class="accordion-content" style="display: block;">
                                 <div class="map-container">
-                                    <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d3782.0868482915114!2d73.7007807755037!3d18.553303487071342!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x3bc2b91fbaeb5a17%3A0x637de7a54b7b14cb!2sGat%20No.%201270%2C%20Lavale%2C%20Off.%20Pune%20Bangalore%20Highway%2C%20Pune%2C%20Maharashtra%20412115%2C%20India!5e0!3m2!1sen!2sus!4v1679653823916!5m2!1sen!2sus" allowfullscreen="" loading="lazy"></iframe>
+                                    <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d3774.3318833900234!2d73.72916350000001!3d18.5233129!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x3bc2bc338f698dd1:0x26bb10488cf7fe3c!2sFLAME+University!5e0!3m2!1sen!2sin!4v1668517741216!16s%2Fg%2F11bw7s1qz1?entry=ttu&g_ep=EgoyMDI0MTExMS4wIKXMDSoASAFQAw%3D%3D" allowfullscreen="" loading="lazy"></iframe>
                                 </div>
                             </div>
                         </div>
