--- a/index.html
+++ b/index.html
@@ -129,9 +129,8 @@
                         <!-- Contact Information Accordion (Open by Default) -->
                         <div class="accordion-item active">
                             <button>Contact Information <span>-</span></button>
-                            <div class="accordion-content" style="display: block;">
+                            <div class="accordion-content" style="display: block;margin-bottom: 45px;">
                                 <p><strong>Name:</strong> Sonia Wadhwani</p>
-                                <p><strong>Phone:</strong> +91 79721 22827</p>
                                 <p><strong>Email:</strong> 
                                     <a href="mailto:sonia.wadhwani@flame.edu.in">sonia.wadhwani@flame.edu.in</a>
                                 </p>
