--- a/index.html
+++ b/index.html
@@ -1,6 +1,6 @@
     <!DOCTYPE html>
     <html lang="en">
-
+    <!-- Header-->
     <head>
         <meta charset="UTF-8">
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
@@ -12,9 +12,8 @@
         <script src="https://cdnjs.cloudflare.com/ajax/libs/p5.js/1.10.0/p5.js"></script>
         <script src="https://cdnjs.cloudflare.com/ajax/libs/p5.js/1.10.0/addons/p5.sound.min.js"></script>        
     </head>
-
+    <!-- Body main content-->
     <body>
-
         <header>
             <a href="index.html">
                 <img src="images/logo.png" alt="Logo" class="logo">
@@ -26,7 +25,7 @@
                 <a href="#lets-talk">Let's Talk</a>
             </nav>
         </header>
-
+        <!-- Left Section to show dynamic text and image-->
         <main>
             <section class="left-section">
                 <p class="large-text-l1" id="typewriterLine1"></p><br>
@@ -37,7 +36,7 @@
                 <img src="images/sonia.png" alt="Sonia Wadhwani">
             </section>
         </main>
-
+        <!-- About me section-->
         <section id="about-me">
             <div class="about-me">
                 <h2>About Me</h2>
@@ -59,7 +58,7 @@
             </div> 
             <br>   
         </section>
-
+        <!-- Skills section-->
         <section id="skills">
             <br>
             <h2>Tools & Skills</h2>
@@ -78,7 +77,7 @@
             </div>
             <br>
         </section>
-
+        <!-- Project section-->
         <section id="projects">
             <h2>Projects</h2>
             <div class="project-box">
@@ -105,7 +104,7 @@
                 <iframe id="modalIframe" src="" frameborder="0"></iframe>
             </div>
         </div>
-
+        <!-- My-art section-->
         <section id="my-art">
             <h2>My Art</h2>
             <div class="art-gallery">
@@ -123,7 +122,7 @@
                 </div>
             </div>
         </section>
-
+        <!-- Lets Talk section-->
         <section id="lets-talk">
             <h2>Let's Talk</h2>
             <div class="contact-container">
@@ -178,7 +177,7 @@
             </div>
         </section>
 
-        
+        <!-- Footer-->
         <section id="footer">
             <footer>
                  <p style="margin-right: 20px; text-align: center;"><center>&copy; Sonia Wadhwani 2024</center></p>
@@ -186,7 +185,7 @@
         </section>
         </body>
 
-
+        <!-- Scripts for different sections these are at the bottom as they manipulate the elements created above-->
         <script src="script/homeanimatedtext.js"></script>
         <script src="script/projects.js"></script>
         <script src="script/myart.js"></script>
