--- a/index.html
+++ b/index.html
@@ -1,42 +1,30 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-  <meta charset="UTF-8">
-  <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Image Scroller</title>
-  <link rel="stylesheet" href="css/styles.css">
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>Infinite Scroll Gallery</title>
+    <link rel="stylesheet" href="css/styles.css">
 </head>
 <body>
 
-  <!-- Header -->
-  <header>
-    <a href="index1.html">
-      <img src="images/logo.png" alt="Logo" class="logo">
-    </a>
-  </header>
+    <!-- Header -->
+    <header>
+        <img src="images/logo.png" class="logo" alt="Logo" onclick="window.location.reload();">
+    </header>
 
-  <!-- Body: Images Section -->
-  <div class="images-container">
-    <div class="image" id="image1">
-      <img src="images/card1.jpg" alt="Card 1">
+    <!-- Image Carousel Container -->
+    <div class="carousel">
+        <div class="carousel-track">
+            <img src="images/card1.jpg" class="carousel-item" id="image1">
+            <img src="images/card2.jpg" class="carousel-item" id="image2">
+            <img src="images/card3.jpg" class="carousel-item" id="image3">
+            <img src="images/card4.jpg" class="carousel-item" id="image4">
+            <img src="images/card5.jpg" class="carousel-item" id="image5">
+            <img src="images/card6.jpg" class="carousel-item" id="image6">
+        </div>
     </div>
-    <div class="image" id="image2">
-      <img src="images/card2.jpg" alt="Card 2">
-    </div>
-    <div class="image" id="image3">
-      <img src="images/card3.jpg" alt="Card 3">
-    </div>
-    <div class="image" id="image4">
-      <img src="images/card4.jpg" alt="Card 4">
-    </div>
-    <div class="image" id="image5">
-      <img src="images/card5.jpg" alt="Card 5">
-    </div>
-    <div class="image" id="image6">
-      <img src="images/card6.jpg" alt="Card 6">
-    </div>
-  </div>
 
-  <script src="js/script.js"></script>
+    <script src="js/script.js"></script>
 </body>
 </html>
